Refactor project structure: integrate Prettier for code formatting, enhance TypeScript configuration with absolute imports, and update ESLint settings. Remove unused TimeSlotScheduler component and its styles, and implement new TextArea component with improved styling. Update Form components to utilize new TextArea and Textfield components.

--- a/mehr-new-structure/tsconfig.app.json
+++ b/mehr-new-structure/tsconfig.app.json
@@ -22,7 +22,21 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    /* Absolute Imports */
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"],
+      "@components/*": ["./src/components/*"],
+      "@shared/*": ["./src/shared/*"],
+      "@pages/*": ["./src/pages/*"],
+      "@helpers/*": ["./src/helpers/*"],
+      "@hooks/*": ["./src/hooks/*"],
+      "@service/*": ["./src/service/*"],
+      "@routes/*": ["./src/routes/*"],
+      "@layout/*": ["./src/layout/*"]
+    }
   },
   "include": ["src"]
 }
